# tale-engine

./: .gitignore  CMakeLists.txt  README.md
docs/: dsl_v1.md  engine_roadmap.txt
engine/: CMakeLists.txt
engine/include/tale_engine/: diagnostics.h  version.h
engine/include/tale_engine/dsl/: ast.h  lexer.h  parser.h  token.h
engine/include/tale_engine/runtime/: interpreter.h  state.h  value.h
engine/src/: diagnostics.cpp
engine/src/dsl/: lexer.cpp  parser.cpp
engine/src/runtime/: interpreter.cpp  state.cpp
game/: scenes.tale
tools/: CMakeLists.txt
tools/run/: CMakeLists.txt  main.cpp
tools/validate/: CMakeLists.txt  main.cpp
